Fixed spacing on mobile

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -12,7 +12,7 @@ html, body, #root, .App {
 }
 
 .stats {
-    width: 70%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
